# goit-ds-hw-02

./: README.md  create_db.py  pyproject.toml  queries.sql  scripts.sql  seed.py  seed2.py  select_bd.py
