[tool.poetry]
name = "goit-ds-hw-02"
version = "0.1.0"
description = ""
authors = ["victorcoffee <106419325+victorcoffee@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
